# hct-site

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  PLANS.md  README.md  docker-compose.yml  hct.html
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/data/inputs/: fels-cv.docx  people.yaml  research.yaml  site.yaml
backend/data/sources/: sources.yaml
backend/data/templates/: describe_system.txt  extraction_system.txt  style_system.txt
backend/jobs/: scholar.yaml
backend/src/: __init__.py  cli.py  config.py  content.py  cv.py  cv_parse.py  describe.py  experiment.py  extract.py  fetch_text.py  llm.py  metrics.py  models.py  obscura_client.py  orchestrate.py  paper_samples.py  paper_sources.py  qa.py  rag.py  scholar.py  scholar_ingest.py  state.py  style.py  summarize.py  supabase_client.py  sync_content.py  timeline.py  ujin_client.py  viewer.py
backend/src/viewer_templates/: add.html  base.html  edit.html  overview.html  table.html
backend/tests/: test_cli.py  test_config.py  test_content.py  test_cv.py  test_cv_parse.py  test_describe.py  test_experiment.py  test_extract.py  test_fetch_text.py  test_llm.py  test_metrics.py  test_models.py  test_obscura_client.py  test_orchestrate.py  test_paper_samples.py  test_paper_sources.py  test_qa.py  test_rag.py  test_scholar.py  test_scholar_ingest.py  test_state.py  test_style.py  test_summarize.py  test_supabase_client.py  test_sync_content.py  test_timeline.py  test_trace.py  test_ujin_client.py  test_viewer.py
backend/ujin_plugins/: hct_publications.py
db/: schema.sql
docs/: ARCHITECTURE.md  FRONTEND-DB.md  FRONTEND-TEMPLATE.md  FRONTEND_ONBOARDING.md  SCHOLAR-PAGINATION.md  VIEWER.md
dynamic-site/: app.js  build.py  index.html
experiments/: README.md  describe_eval.py  paper_summaries.py  plot.py  run.py  sample_papers.yaml  scrape_scholar.py  trace_containers.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/hct-render/: config.js  package.json
frontend/src/: App.jsx  config.js  styles.css
frontend/templates/: index.template.html  paper.template.html
(+29 files in other folders)
