[project]
name = "hct-manager"
version = "0.1.0"
description = "Keeps the HCT Lab site's data up to date: scrape (via ujin) -> LLM extract -> validate -> Supabase."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Muk Chunpongtong" }]
dependencies = [
    "pydantic>=2",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Heavy, edge-only: the experiment harness + plots (experiments/). Not needed by
# the container or the core agent.
experiments = ["matplotlib>=3.7"]

[project.scripts]
hct-manager = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
